fixed link in screenshots. added chronopic3 to faq
svn path=/trunk/; revision=302

--- a/web/data/langs/_ca/Pages/faq
+++ b/web/data/langs/_ca/Pages/faq
@@ -50,6 +50,8 @@ Per a la construcció de Chronopic s'ha fet servir la targeta entrenadora de rob
 <br>A data d'avui, disposem d'una targeta d'expansió que permet connectar l' Skypic amb la plataforma de contactes i un programari (firmware) que permet que Skypic sigui completament funcional per a la detecció d'estats i esdeveniments a la plataforma de contactes. <br>
 Més endavant es crearà la targeta Chronopic, amb menys instrumentacions que Skypic, de reduïdes dimensions i que podrà ésser fabricada fàcilment o adquirida a un preu baix (15-30 euros a l'Estat espanyol).<br>
 Per a més informació llegiu aquesta pàgina web: <a href="http://www.iearobotics.com/personal/juan/proyectos/chronopic/1.0/">documentació de Chronopic 1.0 i el prototip 1</a>.
+<br><b>Actualització (Set 2007)</b>: La documentació de la Chronopic 2.0 ja està a la xarxa 
+Consulteu la <a href="construction_ca.html">pàgina de Construcció</a>.
 
 <p><li>Com puc construir el cronòmetre?<p>
 <p>
