--- a/web/data/langs/_es/Pages/faq
+++ b/web/data/langs/_es/Pages/faq
@@ -50,6 +50,8 @@ Para la construcción de chronopic se ha usado la tarjeta entrenadora de robots 
 <br>Hasta la fecha se dispone de una tarjeta de expansión que permite conectar Skypic con la plataforma de contactos y un software (firmware) que permite que Skypic sea completamente funcional para la detección de estados y eventos en la plataforma de contactos. <br>
 Más delante se creará la tarjeta Chronopic, con menos instrumentaciones que Skypic, de reducidas dimensiones y que podrá ser fabricada facilmente o adquirida por bajo precio (15-30 euros en España).<br>
 Para más información lea esta página web: <a href="http://www.iearobotics.com/personal/juan/proyectos/chronopic/1.0/">documentación de Chronopic 1.0 y el prototipo 1</a>.
+<br><b>Actualización (Sept 2007)</b>: La documentación de la Chronopic 2.0 ya está en la red 
+Consulte la <a href="construction_es.html">página de Construcción</a>.
 
 <p><li>¿Cómo puedo construir el cronómetro?<p>
 <p>
