--- a/web/data/langs/_gl/Pages/faq
+++ b/web/data/langs/_gl/Pages/faq
@@ -51,6 +51,9 @@ Para a construción de Chronopic empregouse a tarxeta adestradora de robots Skyp
 Máis adiante crearase a tarxeta Chronopic, con menos instrumentacións que Skypic, de reducidas dimensións e que poderá ser fabricada facilmente ou adquirida por un prezo baixo (15-30 euros en España).<br>
 Para máis información lea esta páxina web: <a href="http://www.iearobotics.com/personal/juan/proyectos/chronopic/1.0/">Documentación de Chronopic 1.0 e o Prototipo 1 (en castelán)</a>.
 
+<br><b>Actualización (Set 2007)</b>: La documentación de la Chronopic 2.0 ya está en la red 
+Lea la <a href="construction_gl.html">páxina de Construción</a>.
+
 <p><li>Como podo construír o cronómetro?<p>
 <p>
 Lea la <a href="construction_gl.html">páxina de Construción</a>.
