--- a/web/data/langs/_pt/Pages/faq
+++ b/web/data/langs/_pt/Pages/faq
@@ -50,6 +50,9 @@ Para a construção de chronopic se usou a placa treinadora de robots Skypic deb
 <br>Até esta data se dispõe de uma placa de expansão que permite conectar Skypic com a plataforma de contatos e um software (firmware) que permite que Skypic seja completamente funcional para a deteção de estados e eventos na plataforma de contatos. <br>
 Muito em breve se criará a placa Chronopic, com menos instrumentações que Skypic, de reduzidas dimensões e que poderá ser fabricada facilmente ou adquirida por baixo preço (15-30 euros em Espanha).<br>
 Para informação mais detalhada leia esta página web: <a href="http://www.iearobotics.com/personal/juan/proyectos/chronopic/1.0/">documentação de Chronopic 1.0 e o protótipo 1</a>.
+
+<br><b>Actualización (Set 2007)</b>: La documentación de la Chronopic 2.0 ya está en la red 
+Leia la <a href="construction_pt.html">páxina de Construção</a>.
  
 <p><li>Como posso construir o cronômetro?<p>
 <p>
