--- a/po/oc.po
+++ b/po/oc.po
@@ -1320,7 +1320,7 @@ msgstr ""
 
 #: ../src/chronojump.cs:2925
 msgid "translator-credits"
-msgstr "La còla occitana de revirada d'Ubuntu, 2007 - ubuntu-l10n-oci@lists.ubuntu.com"
+msgstr "Yannig Marchegay (Kokoyaya) <yannig@marchegay.org)"
 
 #. the strings created by Catalog cannot be const
 #. formulas
