--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-07  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
+
+        * es.po: Updated Spanish translation.
+
 2007-09-26  Xavier de Blas  <xaviblas@gmail.com>
 
         * es.po: Updated Spanish translation (merged with Jorge Gonzalez)
