--- a/po/oc.po
+++ b/po/oc.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: chronojump 0.48\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-10-13 03:36+0100\n"
-"PO-Revision-Date: 2007-10-14 12:05+0200\n"
+"PO-Revision-Date: 2007-10-14 12:07+0200\n"
 "Last-Translator: Yannig Marchegay (Kokoyaya) <yannig@marchegay.org>\n"
 "Language-Team: Occitan (post 1500) <ubuntu-l10n-oci@lists.ubuntu.com>\n"
 "MIME-Version: 1.0\n"
@@ -30,7 +30,7 @@ msgstr ""
 
 #: ../glade/chronojump.glade.h:5
 msgid "100m"
-msgstr ""
+msgstr "100 m"
 
 #: ../glade/chronojump.glade.h:6
 msgid "20 Yard"
@@ -38,7 +38,7 @@ msgstr ""
 
 #: ../glade/chronojump.glade.h:7
 msgid "200m"
-msgstr ""
+msgstr "200 m"
 
 #: ../glade/chronojump.glade.h:8 ../src/runType.cs:116
 msgid "20Yard Agility test"
@@ -46,15 +46,15 @@ msgstr ""
 
 #: ../glade/chronojump.glade.h:9
 msgid "20m"
-msgstr ""
+msgstr "20 m"
 
 #: ../glade/chronojump.glade.h:10
 msgid "400m"
-msgstr ""
+msgstr "400 m"
 
 #: ../glade/chronojump.glade.h:11
 msgid "505"
-msgstr ""
+msgstr "505"
 
 #: ../glade/chronojump.glade.h:12 ../src/runType.cs:140
 msgid "505 Agility test"
