--- a/po/oc.po
+++ b/po/oc.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: chronojump 0.48\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-10-13 03:36+0100\n"
-"PO-Revision-Date: 2007-10-14 12:07+0200\n"
+"PO-Revision-Date: 2007-10-14 12:28+0200\n"
 "Last-Translator: Yannig Marchegay (Kokoyaya) <yannig@marchegay.org>\n"
 "Language-Team: Occitan (post 1500) <ubuntu-l10n-oci@lists.ubuntu.com>\n"
 "MIME-Version: 1.0\n"
@@ -1226,7 +1226,7 @@ msgstr "_A prepaus"
 
 #: ../glade/chronojump.glade.h:284
 msgid "_Custom"
-msgstr ""
+msgstr "_Personalizat"
 
 #: ../glade/chronojump.glade.h:285
 msgid "_Delete current person from this session"
@@ -1306,7 +1306,7 @@ msgstr "_Mostrar"
 
 #: ../glade/chronojump.glade.h:304
 msgid "action"
-msgstr ""
+msgstr "accion"
 
 #: ../glade/chronojump.glade.h:305
 msgid "all"
