Updated Spanish translation
svn path=/trunk/; revision=316

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,10 @@
+2007-10-25  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
+
+        * es.po: Updated Spanish translation.
+
 2007-10-22  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
-        * es.po: Updated Spanish translation by Eduardo Ratamales.
+        * es.po: Updated Spanish translation by Eduardo Retamales.
 
 2007-10-14  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
