--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-21  Yannig Marchegay <yannig@marchegay.org> 
+
+	* oc.po: Updated Occitan translation
+
 2007-11-03  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
         * es.po: Updated Spanish translation by Eduardo Retamales.
