Updated French translation by Étienne Malandain, Claude Paroz and
2007-11-26  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* fr.po: Updated French translation by Étienne Malandain, Claude
	Paroz and Stéphane Raimbault.

svn path=/trunk/; revision=333

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-11-26  Stéphane Raimbault  <stephane.raimbault@gmail.com>
+
+	* fr.po: Updated French translation by Étienne Malandain, Claude
+	Paroz and Stéphane Raimbault.
+
 2007-11-21  Yannig Marchegay <yannig@marchegay.org> 
 
 	* oc.po: Updated Occitan translation
