Updated Spanish translation
svn path=/trunk/; revision=345

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,10 @@
+2007-12-25  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
+
+	* es.po: Updated Spanish translation by Eduardo Retamales.
+
 2007-12-01  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
-        * es.po: Updated Spanish translation by Eduardo Retamales.
+	* es.po: Updated Spanish translation by Eduardo Retamales.
 
 2007-11-26  Stéphane Raimbault  <stephane.raimbault@gmail.com>
 
@@ -13,7 +17,7 @@
 
 2007-11-03  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
-        * es.po: Updated Spanish translation by Eduardo Retamales.
+	* es.po: Updated Spanish translation by Eduardo Retamales.
 
 2007-10-25  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
