--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-01-17  Gil Forcada  <gforcada@gnome.org>
+
+	* ca.po: Updated Catalan translation.
+	* LINGUAS: Added ca.
+
 2007-12-31  Yannig Marchegay <yannig@marchegay.org>
 
 	* oc.po: Updated Occitan translation.
